--- a/desafios/d012/styles/style.css
+++ b/desafios/d012/styles/style.css
@@ -1,5 +1,15 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Lemon&family=Passion+One:wght@400;700;900&family=Rajdhani:wght@300;400;500;600;700&family=Smooch+Sans:wght@100;200&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Lemon&family=Rajdhani:wght@300;400;500;600;700&family=Smooch+Sans:wght@100;200&family=Sriracha&display=swap');
+
+:root{
+    --font-main: 'Sriracha', cursive;
+    --font-generic: Verdana, Tahoma, sans-serif;
+    --font-title: 'Passion One', sans-serif;
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -8,6 +18,7 @@
 html,body {
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--font-generic);
 }
 
 header {
@@ -19,6 +30,8 @@ header {
 header h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--font-title);
+    font-size: 10vh;
 }
 
 header p {
@@ -40,6 +53,8 @@ section {
     padding-top: 10vh;
     padding-bottom: 10vh;
     padding-left: 30px;
+    font-family: var(--font-main);
+    font-size: 3.5vw;
 }
 
 section.normal {
@@ -54,7 +69,8 @@ section.imagem{
 
 section.imagem p {
     background-color: #00000031;
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
 }
 
 footer {
