--- a/desafios/d012/styles/style.css
+++ b/desafios/d012/styles/style.css
@@ -4,13 +4,13 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Lemon&family=Rajdhani:wght@300;400;500;600;700&family=Smooch+Sans:wght@100;200&family=Sriracha&display=swap');
 
-:root{
+:root {
     --font-main: 'Sriracha', cursive;
     --font-generic: Verdana, Tahoma, sans-serif;
     --font-title: 'Passion One', sans-serif;
 }
 
-*{
+* {
     margin: 0;
     padding: 0;
 }
@@ -38,13 +38,13 @@ header p {
     padding-bottom: 50px;
 }
 
-a{
+a {
     color: #fff;
     text-decoration: none;
     font-weight: bold;
 }
 
-a:hover{
+a:hover {
     text-decoration: underline;
 }
 
@@ -54,7 +54,11 @@ section {
     padding-bottom: 10vh;
     padding-left: 30px;
     font-family: var(--font-main);
-    font-size: 3.5vw;
+    font-size: 22px;
+}
+
+section p {
+    padding-bottom: 2em;
 }
 
 section.normal {
@@ -62,15 +66,28 @@ section.normal {
     color: #000;
 }
 
-section.imagem{
+section.imagem {
     background-color: #1b1919;
     color: #fff;
+    box-shadow: inset 6px 6px 13px 0px #0000009c;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem p {
-    background-color: #00000031;
+    background-color: #00000075;
     display: inline-block;
     padding: 5px;
+    text-shadow: 1px 1px 0px #000;
+}
+
+section#img1 {
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+}
+
+section#img2 {
+    background-image: url('../imagens/background002.jpg');
 }
 
 footer {
