--- a/exercicios/ex026/mq002/styles/style.css
+++ b/exercicios/ex026/mq002/styles/style.css
@@ -1,3 +1,21 @@
 @charset "UTF-8";
 
 /* Configurações gerais */
+
+* {
+    padding: 0;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+body, html {
+    width: 100vw;
+    height: 100vh;
+    background-color: #233EFF;
+}
+
+h1 {
+    color: #fff;
+    text-shadow: 3px 3px 0px #101d79;
+    padding: 10px;
+}
