--- a/desafios/projeto-login/styles/media-query.css
+++ b/desafios/projeto-login/styles/media-query.css
@@ -7,6 +7,7 @@
     
     section#login {
         width: 80vw;
+        height: 270px;
     }
 
     section#login div#imagem {
@@ -28,6 +29,7 @@
 
     section#login {
         width: 900px;
+        height: 340px;
     }
 
     section#login div#imagem {
