--- a/desafios/projeto-login/styles/style.css
+++ b/desafios/projeto-login/styles/style.css
@@ -30,7 +30,7 @@ section#login {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    
 
     overflow: hidden;
     background-color: white;
@@ -39,6 +39,7 @@ section#login {
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.356);
 
+    transform: translate(-50%, -50%);
     transition: width .2s, height .2s;
     transition-timing-function: ease;
 }
@@ -62,4 +63,77 @@ div#formulario h1 {
 
 div#formulario p {
     font-size: 0.8em;
+}
+
+form input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: rgb(7, 134, 92);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form div.campo {
+    display: block;
+    background-color: #5f2c82;
+    border: 2px solid #5f2c82;
+    height: 40px;
+    width: 100%;
+    border-radius: 8px;
+    margin: 5px 0;
+}
+
+div.campo label {
+    display: none;
+}
+
+div.campo span {
+    color: white;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo input {
+    background-color: rgb(156, 223, 201);
+    font-size: 1em;
+    width: calc(100% - 45px);
+    border-radius: 8px;
+    border: none;
+    padding: 4px;
+    height: 100%;
+
+    transform: translateY(-12px);
+}
+
+div.campo input:focus-within {
+    background-color: white;
+    border: none;
+}
+
+form input[type=submit]:hover {
+    background-color: rgb(4, 65, 44);
+}
+
+form a.botao {
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    padding-top: 8px;
+    width: 100%;
+    height: 40px;
+    color: rgb(0, 78, 53);
+    font-weight: 500;
+}
+
+form a.botao:hover {
+    color: rgb(1, 146, 100);
+}
+
+form a.botao span {
+    font-size: 1em;
 }
